# GraphZeppelin

./: .gitignore  .remote-sync.json  .uuid  CMakeLists.txt  Doxyfile  FindOrDownloadPackage.cmake  GraphWorker.cpp  README  README.md  \  aks.cpp  aks.h  bucket.h  commands  example_streaming.conf  graph.cpp  graph.h  graph_gen_wrapper.cpp  graph_worker.conf  graph_worker.cpp  install.sh  k_skeleton.cpp  l0sampling.cpp  main.cpp  nsys_gpuutil.py  prime_generator.h  readme.md  run_experiments.sh  sketch.cpp  sketch.h  streaming.conf  supernode.cpp  swig_test.py  testing_vector.h  tests.cpp  tests.h  tests_all_bucket_fail.cpp  update.cpp  update.h  util.cpp  (+1 more)
.github/workflows/: cmake.yml
CUDAtest/include/: binary_graph_stream.h  bucket.h  cudaSketch.cuh  graph.h  graph_configuration.h  graph_zeppelin_common.h  sketch.h  supernode.h  types.h  util.h
CUDAtest/src/: cudaSketch.cu  sketch.cpp  supernode.cpp  util.cpp
bench/: graphcc_bench.cpp
code/: .sample_stream.txt.swp  Makefile  makefile
code/algorithms/: CC.h
code/buffer_logs/: 13_5.txt  13_5_5.txt  13_6.txt  13_6_2.txt  13_6_5.txt  13_7.txt  15_5.txt  15_5_5.txt  15_6.txt  15_6_2.txt  15_6_5.txt  15_7.txt
code/include/: graph.h
code/logs/: .13_IO.txt.swp  mem_15_3.txt  mem_15_6.txt
code/output_files/: 15_out_gdb.txt  15_out_no_gdb.txt  16_out_no_gdb.txt  SIGMOD_17_time.txt  kron_17_query.txt  new_buff_out.txt  output  output_no_read  output_no_read_6  progressive_output.txt  query_init_test.txt  soc-time-single-perm.txt  soc-time.txt
code/scripting/: run.sh
code/src/: BufferedEdgeInput.h  continuous_query_test.cc  ingestion_test.cc  test_terrace.cc
code/tools/: BufferedEdgeInput.h  BufferedEdgeInput_new.h  BufferedEdgeInput_old.h  BufferedFileInput.h  buffer_test  buffer_test.cpp  continuous_query_test.cpp  graph_stream.h  ingestion_test.cpp  run_simultaneous_updates_queries.cpp
docs/: control_flow.md
include/: .uuid  GraphWorker.h  KEdgeConnect.h  TokuInterface.h  aks.h  ascii_file_stream.h  binary_file_stream.h  binary_graph_stream.h  bucket.h  bucket_buffer.h  bucket_native.h  cache_buffer_tree.h  cc_alg_configuration.h  cc_gpu_sketch_alg.h  cc_sketch_alg.h  cuda_graph.cuh  cuda_graph.h  cuda_kernel.cuh  cuda_xxhash32.cuh  cuda_xxhash64.cuh  dense_sketch.h  driver_configuration.h  dsu.h  graph.h  graph_configuration.h  graph_sketch_driver.h  graph_stream.h  graph_worker.h  int127.h  k_connected_graph.h  k_skeleton.h  mc_alg_configuration.h  mc_gpu_sketch_alg.h  mc_sketch_alg.h  mc_subgraph.h  mincut_graph.h  out_sketch.txt  out_sketch_comp.txt  prime_generator.h  prime_generator_native.h  (+17 more)
include/l0_sampling/: bucket.h  cudaSketch.cuh  fnv_1a.h  montgomery.h  pmshash.h  prime_generator.h  sketch.h  update.h  xorshiro.h
include/sketch/: sketch_columns.h  sketch_concept.h
include/test/: .uuid  efficient_gen.h  file_graph_verifier.h  graph_gen.h  graph_verifier.h  mat_graph_verifier.h  sketch_constructors.h  write_configuration.h
l0_sampling/: aks.cpp  bucket.cpp  int127.cpp  sketch.cpp  sketch_native.cpp  update.cpp
profiling/memory/: collect_data.py  makefile
profiling/time/: load_data.py  profiler.cpp
profiling/util/: ingest.cpp  ingest.h  load_data.py  prof_util.py
src/: .uuid  KEdgeConnect.cpp  cc_alg_configuration.cpp  cc_gpu_sketch_alg.cpp  cc_sketch_alg.cpp  cuda_kernel.cu  cuda_library.cu  cumul_sample.txt  dense_sketch.cpp  driver_configuration.cpp  graph.cpp  graph_configuration.cpp  graph_worker.cpp  k_connected_graph.cpp  mc_alg_configuration.cpp  mc_gpu_sketch_alg.cpp  mc_sketch_alg.cpp  mc_subgraph.cpp  mincut_graph.cpp  out_sketch.txt  out_sketch_comp.txt  recovery.cpp  return_types.cpp  sample.txt  sk_gpu_sketch_alg.cpp  sketch.cpp  sketch.cpp2  sketch_columns.cpp  sketch_driver.cpp  sparse_sketch.cpp  supernode.cpp  util.cpp  work_queue.cpp  worker_thread.cpp
src/l0_sampling/: aks.cpp  bucket.cpp  cudaSketch.cu  fnv_1a.cpp  pmshash.cpp  sketch.cpp  update.cpp
swig/: sketch.i
test/: .uuid  cc_alg_test.cpp  cont_test.cpp  continuous_correctness_test.cpp  cuda_sketch_test.cu  dsu_test.cpp  eager_dsu_speed.cpp  graph_test.cpp  int127_test.cpp  k_skeleton_test.cpp  mpi.cpp  parallel_graph_test.cpp  recovery_test.cpp  simulation.cpp  sketch_test.cpp  supernode_test.cpp  temp.cpp  test_runner.cpp  util_test.cpp  wq_test.cpp  xxhash_test.cu
test/experiment/: BCHMK1_PostProc.cpp  BCHMK_2_toku.cpp  BCHMK_Graph.cpp  BCHMK_post_proc.cpp  graph_gen_driver.cpp  mmp_hash.cpp  native_run.cpp  par.tex  parallelism.cpp  run_experiments.sh  runner.cpp  xxhash_speed.cpp
test/res/: .uuid  1000_0.95_0.5.cum  kron17_trouble.txt  multiples_graph_1024.data  multiples_graph_1024.txt  multiples_graph_1024_stream.data
test/statistical_testing/: analyze_results.py  graph_testing.cpp  large_test_expected.txt  medium_test_expected.txt  medium_test_iso_expected.txt  requirements.txt  small_test_expected.txt  stat_config.txt  test_runner.py
test/util/: .uuid  GTgraph-random  deterministic.cpp  deterministic.h  deterministic_test.cpp  file_graph_verifier.cpp  file_graph_verifier.h  graph_gen.cpp  graph_gen.h  graph_gen_test.cpp  graph_verifier.cpp  graph_verifier.h  graph_verifier_test.cpp  gtgraph-random_config  mat_graph_verifier.cpp  mat_graph_verifier.h  sketch_constructors.h  stats.h  streamify.cpp  testing_vector.h  write_configuration.h
toku_interface/: .gitignore  Makefile  README.md  initialSetup.sh
toku_interface/src/: TokuInterface.cpp  TokuInterface.h  main.cpp
tools/: .uuid  adjlist_test.cpp  cuda_process_stream.cu  k_connectivity.cu  min_cut.cu  nsys_resultReader.py  og_k_connectivity.cpp  process_stream.cpp  single_kernel_stream.cu  sketch_testing.cpp  spanning_forest_extract.cpp  sum_sketch_testing.py  test.txt  test_correctness.cpp  test_correctness_k_edge_connect.cpp  to_binary_format.cpp  validate_binary_stream.cpp
tools/benchmark/: .uuid  BENCH.md  graphcc_bench.cpp
tools/converter/: metis_converter.cpp  stream_converter.cpp
tools/experiment/: BCHMK_Graph.cpp  BCHMK_post_proc.cpp  parallelism.cpp
tools/others/: stream_shuffler.cpp
(+35 files in other folders)
